implemented conference summary page